--- a/admin/static/css/mixin.styl
+++ b/admin/static/css/mixin.styl
@@ -108,6 +108,11 @@ border-box()
   -moz-box-sizing: border-box
   box-sizing: border-box
 
+content-box()
+  -webkit-box-sizing: content-box
+  -moz-box-sizing: content-box
+  box-sizing: content-box
+
 transition(s = 0.3s, o =  opacity, t = linear)
   -webkit-transition: s o t
   -moz-transition: s o t
