--- a/site/static/css/responsive.styl
+++ b/site/static/css/responsive.styl
@@ -214,12 +214,13 @@
 
 
 // Heights
-@media (max-height: 480px)
+
+@media (max-height: 600px)
   .main-nav
   .toc-nav
   .collection-nav
     > ul
-      max-height: 400px
+      bottom: 0
 
   .search-results-view
-    max-height: 400px
+    bottom: 0
